# rust-embed-bug-with-workspaces

./: .gitignore  Cargo.toml  README.md
report/: Cargo.toml
report/src/: main.rs
report/templates/: base.html
